Added field and slider visualisation

--- a/Builds/WebGL/Current/Debug/Configs/AppConfig.json
+++ b/Builds/WebGL/Current/Debug/Configs/AppConfig.json
@@ -1,6 +1,6 @@
 {
 	"basePath": "https://nncms.s3-eu-central-1.amazonaws.com/assets/edison/exercises/brain",
-	"defaultExercise": "Memobox",
+	"defaultExercise": "FlashGlance",
 	"defaultMode": "workout",
 	"startedAt": 0.0,
 	"antiAliasing": 4,
